src/github.com/ebay/akutan/query/parser/testdata/legacy/errors/entity_chars.res
Query:
?s <as\df> ?o

Parsed:
Error: unable to parse query: line 1 column 7: expected >
